@@ -45,19 +45,19 @@ color2 FFA300
 color3 grey
 
 TEXT
-${execi 2 ~/.conky/gmd/./gmdshell.sh}
+${execi 2 ~/.conky/gmd/./gmd_shell_consolidate.sh}
 ${color2}CPU Average${color0}${alignr}${cpu cpu0}%
 ${cpubar cpu0 10,}
-${execi 2 cat ./.pscpu | awk 'NR==1{print $1}'} $alignr ${execi 2 cat ./.pscpu | awk 'NR==1{print $2}'}%
-${execi 2 cat ./.pscpu | awk 'NR==2{print $1}'} $alignr ${execi 2 cat ./.pscpu | awk 'NR==2{print $2}'}%
-${execi 2 cat ./.pscpu | awk 'NR==3{print $1}'} $alignr ${execi 2 cat ./.pscpu | awk 'NR==3{print $2}'}%
-${execi 2 cat ./.pscpu | awk 'NR==4{print $1}'} $alignr ${execi 2 cat ./.pscpu | awk 'NR==4{print $2}'}%
-${execi 2 cat ./.pscpu | awk 'NR==5{print $1}'} $alignr ${execi 2 cat ./.pscpu | awk 'NR==5{print $2}'}%
+${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==1{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==1{print $2}'}%
+${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==2{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==2{print $2}'}%
+${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==3{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==3{print $2}'}%
+${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==4{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==4{print $2}'}%
+${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==5{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redcpushell | awk 'NR==5{print $2}'}%
 
 ${color2}RAM ${color0}${alignr}${mem}
 ${membar 10,}
-${execi 2 cat ./.psmem | awk 'NR==1{print $1}'} $alignr ${execi 2 cat ./.psmem | awk 'NR==1{printf("%.2f \n",(($2 / 1000)))}'} MB
-${execi 2 cat ./.psmem | awk 'NR==2{print $1}'} $alignr ${execi 2 cat ./.psmem | awk 'NR==2{printf("%.2f \n",(($2 / 1000)))}'} MB
-${execi 2 cat ./.psmem | awk 'NR==3{print $1}'} $alignr ${execi 2 cat ./.psmem | awk 'NR==3{printf("%.2f \n",(($2 / 1000)))}'} MB
-${execi 2 cat ./.psmem | awk 'NR==4{print $1}'} $alignr ${execi 2 cat ./.psmem | awk 'NR==4{printf("%.2f \n",(($2 / 1000)))}'} MB
-${execi 2 cat ./.psmem | awk 'NR==5{print $1}'} $alignr ${execi 2 cat ./.psmem | awk 'NR==5{printf("%.2f \n",(($2 / 1000)))}'} MB
+${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==1{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==1{printf("%.2f \n",(($2 / 1000)))}'} MB
+${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==2{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==2{printf("%.2f \n",(($2 / 1000)))}'} MB
+${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==3{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==3{printf("%.2f \n",(($2 / 1000)))}'} MB
+${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==4{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==4{printf("%.2f \n",(($2 / 1000)))}'} MB
+${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==5{print $1}'} $alignr ${execi 2 cat ~/.conky/gmd/.redmemshell | awk 'NR==5{printf("%.2f \n",(($2 / 1000)))}'} MB
