@@ -5,4 +5,4 @@ time node ~/.conky/gmd/gmd.js ~/.conky/gmd/ -ps
 
 echo
 echo SHELL
-time ~/.conky/gmd/./gmdshell.sh
+time ~/.conky/gmd/./gmdshell_eval.sh
